Add database, email, and error logging configurations; implement authentication and order management services